--- a/umap/static/umap/locale/el.json
+++ b/umap/static/umap/locale/el.json
@@ -535,85 +535,85 @@
     "Back to list": "Πίσω στην λίστα",
     "Toggle rule": "Εναλλαγή κανόνα",
     "Delete rule": "Διαγραφή κανόνα",
-    "Cannot save layer, please try again in a few minutes.": "Δεν μπόρεσε να αποθηκευτεί το επίπεδο, παρακαλούμε δοκιμάστε ξανά σε μερικά λεπτά.",
-    "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.": "Ενεργοποιήστε την ζωντανή συνεργατική επεξεργασία σε αυτόν τον χάρτη. Άλλοι χρήστες θα πρέπει να ξαναφορτώσουν τον χάρτη μετά την αλλαγή αυτής της ρύθμισης.",
-    "More help resources": "More help resources",
-    "This map is a template": "This map is a template",
-    "Add text along path": "Add text along path",
-    "Text color": "Text color",
-    "Text offset": "Text offset",
-    "Text position": "Text position",
-    "start": "start",
-    "center": "center",
-    "end": "end",
-    "Text repeat": "Text repeat",
-    "Text rotate": "Text rotate",
-    "Text size": "Text size",
-    "Load map template": "Load map template",
-    "My templates": "My templates",
-    "From staff": "From staff",
-    "From community": "From community",
-    "You must select a template.": "You must select a template.",
-    "Line decoration": "Line decoration",
-    "Reuse this template": "Reuse this template",
-    "Create a new map using this template": "Create a new map using this template",
-    "Save template": "Save template",
-    "Load template": "Load template",
-    "Loading a template will apply predefined styles and settings to your map": "Loading a template will apply predefined styles and settings to your map",
-    "Load template with data": "Load template with data",
-    "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".": "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".",
-    "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.": "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.",
-    "There is no public template yet.": "There is no public template yet.",
-    "Explore": "Explore",
-    "Import data from public open data portals": "Import data from public open data portals",
-    "Choose a portal": "Choose a portal",
-    "Limit results to current map view": "Limit results to current map view",
-    "Please choose an instance first.": "Please choose an instance first.",
-    "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.": "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.",
-    "Add a new field": "Add a new field",
-    "Are you sure you want to delete this field on all the features?": "Are you sure you want to delete this field on all the features?",
-    "Please enter the new name of this field": "Please enter the new name of this field",
-    "Cannot process MultiPoint": "Cannot process MultiPoint",
-    "Manage Fields": "Manage Fields",
-    "Rename this field": "Rename this field",
-    "Delete this field": "Delete this field",
-    "Double click to edit the name": "Double click to edit the name",
-    "Print map": "Print map",
-    "Choose a format": "Choose a format",
-    "Scale map": "Scale map",
-    "portrait": "portrait",
-    "landscape": "landscape",
-    "Print": "Print",
-    "Preparing the print…": "Preparing the print…",
-    "Large Circle": "Large Circle",
-    "Icon size": "Icon size",
-    "Will only affect raw and large circle icons.": "Will only affect raw and large circle icons.",
-    "Route": "Route",
-    "Display the print control": "Display the print control",
-    "Compute isochrone from here": "Compute isochrone from here",
-    "Route settings": "Route settings",
-    "Transform to regular line": "Transform to regular line",
-    "Transform to route": "Transform to route",
-    "Restore route": "Restore route",
-    "Compute elevation": "Compute elevation",
-    "Profile": "Profile",
-    "Compute elevations": "Compute elevations",
-    "Route preference": "Route preference",
-    "Compute route": "Compute route",
-    "Walking": "Walking",
-    "Hiking": "Hiking",
-    "By car": "By car",
-    "Cycling": "Cycling",
-    "Wheelchair": "Wheelchair",
-    "Recommended": "Recommended",
-    "Fastest": "Fastest",
-    "Shortest": "Shortest",
-    "Max time (in minutes)": "Max time (in minutes)",
-    "Number of lines": "Number of lines",
-    "Distance:": "Distance:",
-    "Gain:": "Gain:",
-    "Loss:": "Loss:",
-    "Altitude:": "Altitude:",
-    "Right-click to edit": "Right-click to edit",
-    "Draw along routes": "Draw along routes"
+    "Cannot save layer, please try again in a few minutes.": "Δεν ήταν δυνατή η αποθήκευση του επιπέδου, παρακαλούμε δοκιμάστε ξανά σε μερικά λεπτά.",
+    "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.": "Ενεργοποιήστε τη ζωντανή συνεργατική επεξεργασία σε αυτόν τον χάρτη. Άλλοι χρήστες θα πρέπει να ξαναφορτώσουν τον χάρτη μετά την αλλαγή αυτής της ρύθμισης.",
+    "More help resources": "Περισσότερες πηγές βοήθειας",
+    "This map is a template": "Αυτός ο χάρτης είναι ένα πρότυπο",
+    "Add text along path": "Προσθήκη κειμένου κατά μήκος του μονοπατιού",
+    "Text color": "Χρώμα κειμένου",
+    "Text offset": "Μετατόπιση κειμένου",
+    "Text position": "Θέση κειμένου",
+    "start": "αρχή",
+    "center": "κέντρο",
+    "end": "τέλος",
+    "Text repeat": "Επανάληψη κειμένου",
+    "Text rotate": "Περιστροφή κειμένου",
+    "Text size": "Μέγεθος κειμένου",
+    "Load map template": "Φόρτωση προτύπου χάρτη",
+    "My templates": "Τα πρότυπά μου",
+    "From staff": "Από το προσωπικό",
+    "From community": "Από την κοινότητα",
+    "You must select a template.": "Πρέπει να επιλέξετε ένα πρότυπο.",
+    "Line decoration": "Διακόσμηση γραμμής",
+    "Reuse this template": "Επαναχρησιμοποίηση του προτύπου",
+    "Create a new map using this template": "Δημιουργία νέου χάρτη χρησιμοποιώντας αυτό το πρότυπο",
+    "Save template": "Αποθήκευση προτύπου",
+    "Load template": "Φόρτωση προτύπου",
+    "Loading a template will apply predefined styles and settings to your map": "Η φόρτωση ενός προτύπου θα εφαρμόσει προκαθορισμένα στυλ και ρυθμίσεις στο χάρτη σας",
+    "Load template with data": "Φόρτωση προτύπου με δεδομένα",
+    "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".": "Δεν έχετε καταχωρήσει ακόμη πρότυπο. Μπορείτε να το κάνετε, δημιουργώντας έναν νέο χάρτη και επισημαίνοντάς τον ως «πρότυπο».",
+    "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.": "Δεν υπάρχει ακόμη προτεινόμενο πρότυπο. Τα προτεινόμενα πρότυπα είναι αυτά που έχουν επισημανθεί με αστερίσκο από τους διαχειριστές του uMap.",
+    "There is no public template yet.": "Δεν υπάρχει ακόμη δημόσιο πρότυπο.",
+    "Explore": "Εξερεύνηση",
+    "Import data from public open data portals": "Εισαγωγή δεδομένων από δημόσιες πύλες ανοικτών δεδομένων",
+    "Choose a portal": "Επιλέξτε μια πύλη",
+    "Limit results to current map view": "Περιορισμός αποτελεσμάτων στην τρέχουσα προβολή χάρτη",
+    "Please choose an instance first.": "Παρακαλώ επιλέξτε πρώτα μια περίπτωση.",
+    "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.": "Δεν βρέθηκε στήλη γεωγραφικών συντεταγμένων: πρέπει να είναι είτε `lat(itude)` και `lon(gitude)` είτε `geom(etry)`.",
+    "Add a new field": "Προσθήκη νέου πεδίου",
+    "Are you sure you want to delete this field on all the features?": "Είστε σίγουροι ότι θέλετε να διαγράψετε αυτό το πεδίο από όλα τα χαρακτηριστικά;",
+    "Please enter the new name of this field": "Παρακαλώ εισάγετε το νέο όνομα αυτού του πεδίου.",
+    "Cannot process MultiPoint": "Δεν είναι δυνατή η επεξεργασία MultiPoint.",
+    "Manage Fields": "Διαχείριση πεδίων",
+    "Rename this field": "Μετονομασία πεδίου",
+    "Delete this field": "Διαγραφή πεδίου",
+    "Double click to edit the name": "Διπλό κλικ για επεξεργασία του ονόματος",
+    "Print map": "Εκτύπωση χάρτη",
+    "Choose a format": "Επιλέξτε μορφή",
+    "Scale map": "Κλίμακα χάρτη",
+    "portrait": "κατακόρυφα",
+    "landscape": "οριζόντια",
+    "Print": "Εκτύπωση",
+    "Preparing the print…": "Προετοιμασία της εκτύπωσης…",
+    "Large Circle": "Μεγάλος κύκλος",
+    "Icon size": "Μέγεθος εικονιδίου",
+    "Will only affect raw and large circle icons.": "Θα επηρεάσει μόνο τα ακατέργαστα μεγάλα κυκλικά εικονίδια .",
+    "Route": "Διαδρομή",
+    "Display the print control": "Εμφάνιση του ελέγχου εκτύπωσης",
+    "Compute isochrone from here": "Υπολογισμός ισοχρώματος από εδώ",
+    "Route settings": "Ρυθμίσεις διαδρομής",
+    "Transform to regular line": "Μετατροπή σε κανονική γραμμή",
+    "Transform to route": "Μετατροπή σε διαδρομή",
+    "Restore route": "Επαναφορά διαδρομής",
+    "Compute elevation": "Υπολογισμός υψομέτρου",
+    "Profile": "Προφίλ",
+    "Compute elevations": "Υπολογισμός υψομέτρων",
+    "Route preference": "Προτίμηση διαδρομής",
+    "Compute route": "Υπολογισμός διαδρομής",
+    "Walking": "Περπάτημα",
+    "Hiking": "Πεζοπορία",
+    "By car": "Με αυτοκίνητο",
+    "Cycling": "Ποδηλασία",
+    "Wheelchair": "Αναπηρικό αμαξίδιο",
+    "Recommended": "Προτεινόμενη",
+    "Fastest": "Γρηγορότερη",
+    "Shortest": "Συντομότερη",
+    "Max time (in minutes)": "Μέγιστος χρόνος (σε λεπτά)",
+    "Number of lines": "Αριθμός γραμμών",
+    "Distance:": "Απόσταση:",
+    "Gain:": "Κέρδος:",
+    "Loss:": "Απώλεια:",
+    "Altitude:": "Υψόμετρο:",
+    "Right-click to edit": "Δεξί κλικ για επεξεργασία",
+    "Draw along routes": "Σχεδιάστε κατά μήκος διαδρομών"
 }
