--- a/umap/static/umap/locale/eu.json
+++ b/umap/static/umap/locale/eu.json
@@ -537,7 +537,7 @@
     "Delete rule": "Delete rule",
     "Cannot save layer, please try again in a few minutes.": "Ezin da geruza gorde, saiatu berriro minutu batzuk barru.",
     "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.": "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.",
-    "More help resources": "More help resources",
+    "More help resources": "Laguntza baliabide gehiago",
     "This map is a template": "Mapa hau txantiloi bat da",
     "Add text along path": "Gehitu testua bidean zehar",
     "Text color": "Testuaren kolorea",
