--- a/umap/static/umap/locale/nl.json
+++ b/umap/static/umap/locale/nl.json
@@ -391,7 +391,7 @@
     "Edit map details": "Kaartdetails bewerken",
     "Back to browser": "Terug naar browser",
     "Toggle size": "Grootte wisselen",
-    "Display the caption control": "De controleknop van de Het ondertiteling weergeven",
+    "Display the caption control": "Toon de knop voor het weergeven van het bijschrift",
     "<empty value>": "<empty value>",
     "Min": "Min",
     "Max": "Max",
@@ -559,61 +559,61 @@
     "Create a new map using this template": "Maak een nieuwe kaart met dit sjabloon",
     "Save template": "Sla sjabloon op",
     "Load template": "Laad sjabloon",
-    "Loading a template will apply predefined styles and settings to your map": "Loading a template will apply predefined styles and settings to your map",
-    "Load template with data": "Load template with data",
-    "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".": "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".",
-    "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.": "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.",
-    "There is no public template yet.": "There is no public template yet.",
-    "Explore": "Explore",
-    "Import data from public open data portals": "Import data from public open data portals",
-    "Choose a portal": "Choose a portal",
-    "Limit results to current map view": "Limit results to current map view",
-    "Please choose an instance first.": "Please choose an instance first.",
-    "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.": "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.",
-    "Add a new field": "Add a new field",
-    "Are you sure you want to delete this field on all the features?": "Are you sure you want to delete this field on all the features?",
-    "Please enter the new name of this field": "Please enter the new name of this field",
-    "Cannot process MultiPoint": "Cannot process MultiPoint",
-    "Manage Fields": "Manage Fields",
-    "Rename this field": "Rename this field",
-    "Delete this field": "Delete this field",
-    "Double click to edit the name": "Double click to edit the name",
-    "Print map": "Print map",
-    "Choose a format": "Choose a format",
-    "Scale map": "Scale map",
-    "portrait": "portrait",
-    "landscape": "landscape",
-    "Print": "Print",
-    "Preparing the print…": "Preparing the print…",
-    "Large Circle": "Large Circle",
-    "Icon size": "Icon size",
-    "Will only affect raw and large circle icons.": "Will only affect raw and large circle icons.",
+    "Loading a template will apply predefined styles and settings to your map": "Een sjabloon uploaden zal er voor zorgen dat stijlen en instellingen toegepast worden op je kaart",
+    "Load template with data": "Sjabloon met data uploaden",
+    "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".": "Er is nog geen sjabloon geregistreerd. Je kan er een toevoegend door een nieuwe kaart te maken en die te markeren als \"sjabloon\".",
+    "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.": "Er is nog geen aangeraden sjabloon. Aangeraden sjablonen zijn degenen die gesterd zijn door uMap beheerders.",
+    "There is no public template yet.": "Er is nog geen publiek sjabloon.",
+    "Explore": "Verkennen",
+    "Import data from public open data portals": "Importeer data van publieke open data portalen",
+    "Choose a portal": "Kies een portaal",
+    "Limit results to current map view": "Beperk resultaten tot de huidige kaartweergave",
+    "Please choose an instance first.": "Kies eerst een instantie.",
+    "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.": "Geen geo kolom gevonden: zorg voor `lat(itude)` en `lon(gitude)` of `geom(etry)`.\n ",
+    "Add a new field": "Voeg een nieuw veld toe",
+    "Are you sure you want to delete this field on all the features?": "Ben je zeker dat je dit veld voor alle objecten wil verwijderen.",
+    "Please enter the new name of this field": "Vul de nieuwe naam voor dit veld in",
+    "Cannot process MultiPoint": "MultiPoint data kan niet verwerkt worden",
+    "Manage Fields": "Beheer Velden",
+    "Rename this field": "Naam van dit veld wijzigen",
+    "Delete this field": "Verwijder dit veld",
+    "Double click to edit the name": "Dubbelklikken om de naam te wijzigen",
+    "Print map": "Print deze kaart",
+    "Choose a format": "Kies een formaat",
+    "Scale map": "Kaart schalen",
+    "portrait": "portret",
+    "landscape": "landschap",
+    "Print": "Printen",
+    "Preparing the print…": "Print aan het voorbereiden...",
+    "Large Circle": "Grote Cirkel",
+    "Icon size": "Grootte van het icoon",
+    "Will only affect raw and large circle icons.": "Dit heeft enkel effect op ruwe of grote cirkel iconen",
     "Route": "Route",
-    "Display the print control": "Display the print control",
-    "Compute isochrone from here": "Compute isochrone from here",
-    "Route settings": "Route settings",
-    "Transform to regular line": "Transform to regular line",
-    "Transform to route": "Transform to route",
-    "Restore route": "Restore route",
-    "Compute elevation": "Compute elevation",
-    "Profile": "Profile",
-    "Compute elevations": "Compute elevations",
-    "Route preference": "Route preference",
-    "Compute route": "Compute route",
-    "Walking": "Walking",
-    "Hiking": "Hiking",
-    "By car": "By car",
-    "Cycling": "Cycling",
-    "Wheelchair": "Wheelchair",
-    "Recommended": "Recommended",
-    "Fastest": "Fastest",
-    "Shortest": "Shortest",
-    "Max time (in minutes)": "Max time (in minutes)",
-    "Number of lines": "Number of lines",
-    "Distance:": "Distance:",
-    "Gain:": "Gain:",
-    "Loss:": "Loss:",
-    "Altitude:": "Altitude:",
-    "Right-click to edit": "Right-click to edit",
-    "Draw along routes": "Draw along routes"
+    "Display the print control": "Toon de print bediening",
+    "Compute isochrone from here": "Bereken isochronen vanaf hier",
+    "Route settings": "Route instellingen",
+    "Transform to regular line": "Zet om naar gewone lijn",
+    "Transform to route": "Transformeer naar een route",
+    "Restore route": "Route terugzetten",
+    "Compute elevation": "Bereken hoogte",
+    "Profile": "Profiel",
+    "Compute elevations": "Bereken hoogtes",
+    "Route preference": "Route voorkeuren",
+    "Compute route": "Bereken route",
+    "Walking": "Te voet",
+    "Hiking": "Wandelen",
+    "By car": "Met de auto",
+    "Cycling": "Fietsen",
+    "Wheelchair": "Rolstoel",
+    "Recommended": "Aangeraden",
+    "Fastest": "Snelste",
+    "Shortest": "Kortste",
+    "Max time (in minutes)": "Maximum tijd (in minuten)",
+    "Number of lines": "Aantal lijnen",
+    "Distance:": "Afstand:",
+    "Gain:": "Winst:",
+    "Loss:": "Verlies:",
+    "Altitude:": "Hoogte:",
+    "Right-click to edit": "Rechtermuisklik om te editeren",
+    "Draw along routes": "Teken langs routes"
 }
