--- a/umap/locale/el/LC_MESSAGES/django.po
+++ b/umap/locale/el/LC_MESSAGES/django.po
@@ -6,16 +6,16 @@
 # Emmanuel Verigos <emverigos@geodev.gr>, 2017-2018,2021
 # Emmanuel Verigos <emverigos@geodev.gr>, 2018
 # Emmanuel Verigos <emverigos@geodev.gr>, 2017
-# Jim Kats <jim-kats@hotmail.com>, 2022-2023
+# Jim Kats <jim-kats@hotmail.com>, 2022-2023,2025
 # prendi <prendi@openmailbox.org>, 2017
-# Yannis Kaskamanidis <kiolalis@gmail.com>, 2021,2023-2024
+# Yannis Kaskamanidis <kiolalis@gmail.com>, 2021,2023-2025
 msgid ""
 msgstr ""
 "Project-Id-Version: uMap\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-06-10 09:19+0000\n"
+"POT-Creation-Date: 2025-08-14 15:22+0000\n"
 "PO-Revision-Date: 2013-11-22 14:00+0000\n"
-"Last-Translator: prendi <prendi@openmailbox.org>, 2017\n"
+"Last-Translator: Yannis Kaskamanidis <kiolalis@gmail.com>, 2021,2023-2025\n"
 "Language-Team: Greek (http://app.transifex.com/openstreetmap/umap/language/el/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -157,11 +157,11 @@ msgstr "ρυθμίσεις"
 
 #: models.py:243
 msgid "save as template"
-msgstr ""
+msgstr "αποθήκευση ως πρότυπο"
 
 #: models.py:244
 msgid "This map is a template map."
-msgstr ""
+msgstr "Αυτός ο χάρτης είναι ένα πρότυπο χάρτη."
 
 #: models.py:420
 msgid "Clone of"
@@ -181,19 +181,19 @@ msgstr "Εμφάνιση αυτού του επιπέδου κατά την φό
 
 #: settings/base.py:283
 msgid "uMap user documentation"
-msgstr ""
+msgstr "Τεκμηρίωση χρήστη του uMap"
 
 #: settings/base.py:288
 msgid "Video tutorials"
-msgstr ""
+msgstr "Διδακτικά βοηθήματα σε βίντεο"
 
 #: settings/base.py:293
 msgid "OpenStreetMap.org forum"
-msgstr ""
+msgstr "Φόρουμ OpenStreetMap.org"
 
 #: settings/base.py:298
 msgid "OpenStreetMap France forum"
-msgstr ""
+msgstr "Φόρουμ OpenStreetMap Γαλλίας"
 
 #: settings/base.py:318
 msgid "Art and Culture"
@@ -330,7 +330,7 @@ msgstr "Περιήγηση στους χάρτες με αστέρι του χρ
 msgid "%(current_user)s has no starred maps yet."
 msgstr "Ο %(current_user)s δεν έχει ακόμη χάρτες με αστέρι."
 
-#: templates/base.html:13
+#: templates/base.html:16
 msgid ""
 "uMap lets you create maps with OpenStreetMap layers in a minute and embed "
 "them in your site."
@@ -506,11 +506,11 @@ msgstr "Οι χάρτες μου"
 #: templates/umap/dashboard_menu.html:11
 #, python-format
 msgid "My Templates (%(count)s)"
-msgstr ""
+msgstr "Τα πρότυπά μου (%(count)s)"
 
 #: templates/umap/dashboard_menu.html:13 templates/umap/user_templates.html:6
 msgid "My Templates"
-msgstr ""
+msgstr "Τα πρότυπά μου"
 
 #: templates/umap/dashboard_menu.html:17
 msgid "My profile"
@@ -534,15 +534,15 @@ msgstr "Είστε συνδεδεμένοι. Συνέχεια..."
 
 #: templates/umap/map_list.html:15
 msgid "template"
-msgstr ""
+msgstr "πρότυπο"
 
-#: templates/umap/map_list.html:18 views.py:458
+#: templates/umap/map_list.html:18 views.py:459
 msgid "by"
 msgstr "από"
 
 #: templates/umap/map_list.html:22
 msgid "See the template"
-msgstr ""
+msgstr "Δες το πρότυπο"
 
 #: templates/umap/map_list.html:22
 msgid "See the map"
@@ -768,7 +768,7 @@ msgstr "Αναζήτηση στους χάρτες μου"
 
 #: templates/umap/user_dashboard.html:11
 msgid "Map’s name"
-msgstr ""
+msgstr "Όνομα χάρτη"
 
 #: templates/umap/user_dashboard.html:12
 #, python-format
@@ -793,93 +793,97 @@ msgstr "Νέα ομάδα"
 
 #: templates/umap/user_templates.html:10
 msgid "Search my templates"
-msgstr ""
+msgstr "Αναζήτηση στα πρότυπά μου"
 
 #: templates/umap/user_templates.html:11
 msgid "Template’s name"
-msgstr ""
+msgstr "Όνομα προτύπου"
 
 #: templates/umap/user_templates.html:12
 #, python-format
 msgid "Download %(count)s templates"
-msgstr ""
+msgstr "Κατεβάστε %(count)s πρότυπα"
 
 #: templates/umap/user_templates.html:15
 msgid "You have no template yet."
-msgstr ""
+msgstr "Δεν έχετε πρότυπο ακόμη."
 
 #: templates/umap/user_templates.html:16
 msgid "Create a template"
-msgstr ""
+msgstr "Δημιουργήστε ένα πρότυπο"
 
 #: templates/umap/user_templates.html:17
 msgid "No template found."
-msgstr ""
+msgstr "Δεν βρέθηκε πρότυπο."
 
-#: views.py:233
+#: views.py:235
 msgid "Cannot delete a team with more than one member"
 msgstr "Δεν είναι δυνατή η διαγραφή μιας ομάδας που έχει περισσότερα από ένα μέλη"
 
-#: views.py:237
+#: views.py:239
 #, python-format
 msgid "Team “%(name)s” has been deleted"
 msgstr "Η ομάδα «%(name)s» έχει διαγραφεί."
 
-#: views.py:463
+#: views.py:464
 msgid "View the map"
 msgstr "Προβολή του χάρτη"
 
-#: views.py:864
+#: views.py:867
 msgid "See full screen"
 msgstr "Προβολή πλήρους οθόνης"
 
-#: views.py:1007
+#: views.py:1010
 msgid "Map editors updated with success!"
 msgstr "Η ενημέρωση των συντακτών χάρτη ήταν επιτυχής!"
 
-#: views.py:1043
+#: views.py:1046
 #, python-format
 msgid "The uMap edit link for your map: %(map_name)s"
 msgstr "Ο uMap σύνδεσμος επεξεργασίας του χάρτη σας: %(map_name)s"
 
-#: views.py:1046
+#: views.py:1049
 #, python-format
 msgid "Here is your secret edit link: %(link)s"
 msgstr "Εδώ είναι ο μυστικός σύνδεσμος επεξεργασίας: %(link)s"
 
-#: views.py:1053
+#: views.py:1056
 #, python-format
 msgid "Can't send email to %(email)s"
 msgstr "Αδυναμία αποστολής email στο %(email)s"
 
-#: views.py:1056
+#: views.py:1059
 #, python-format
 msgid "Email sent to %(email)s"
 msgstr "Μήνυμα email στάλθηκε στο %(email)s"
 
-#: views.py:1067
+#: views.py:1070
 msgid "Only its owner can delete the map."
 msgstr "Μονό ο ιδιοκτήτης μπορεί να διαγράψει αυτό τον χάρτη."
 
-#: views.py:1073
+#: views.py:1076
 msgid "Map successfully deleted."
 msgstr "Ο χάρτης διαγράφηκε με επιτυχία."
 
-#: views.py:1099
+#: views.py:1102
 #, python-format
 msgid ""
 "Your map has been cloned! If you want to edit this map from another "
 "computer, please use this link: %(anonymous_url)s"
 msgstr "Ο χάρτης κλωνοποιήθηκε! Αν θέλετε να τον επεξεργαστείτε από κάποιον άλλο υπολογιστή, παρακαλώ χρησιμοποιήστε αυτόν τον σύνδεσμο: %(anonymous_url)s"
 
-#: views.py:1104
+#: views.py:1107
 msgid "Congratulations, your map has been cloned!"
 msgstr "Συγχαρητήρια ο χάρτης σας κλωνοποιήθηκε!"
 
-#: views.py:1358
+#: views.py:1361
 msgid "Layer successfully deleted."
 msgstr "Το επίπεδο διαγράφηκε με επιτυχία."
 
-#: views.py:1380
+#: views.py:1383
 msgid "Permissions updated with success!"
 msgstr "Τα δικαιώματα ενημερώθηκαν με επιτυχία!"
+
+#: views.py:1400
+msgid "Generic"
+msgstr "Γενικό"
