--- a/umap/locale/de/LC_MESSAGES/django.po
+++ b/umap/locale/de/LC_MESSAGES/django.po
@@ -212,11 +212,11 @@ msgstr "Fahrradfahren"
 
 #: settings/base.py:320
 msgid "Business"
-msgstr ""
+msgstr "Gewerbe"
 
 #: settings/base.py:321
 msgid "Environment"
-msgstr "Umgebung"
+msgstr "Umwelt"
 
 #: settings/base.py:322
 msgid "Education"
@@ -224,11 +224,11 @@ msgstr "Bildung"
 
 #: settings/base.py:323
 msgid "Food and Agriculture"
-msgstr ""
+msgstr "Lebensmittel und Landwirdschaft"
 
 #: settings/base.py:324
 msgid "Geopolitics"
-msgstr ""
+msgstr "Geopolitik"
 
 #: settings/base.py:325
 msgid "Health"
@@ -244,7 +244,7 @@ msgstr "Geschichte"
 
 #: settings/base.py:328
 msgid "Public sector"
-msgstr ""
+msgstr "Öffentlicher Bereich"
 
 #: settings/base.py:329
 msgid "Science"
@@ -264,7 +264,7 @@ msgstr "Reisen"
 
 #: settings/base.py:333
 msgid "Transports"
-msgstr ""
+msgstr "Verkehrsmittel"
 
 #: settings/base.py:334
 msgid "Tourism"
@@ -349,11 +349,11 @@ msgstr "Anmeldung"
 
 #: templates/registration/login.html:22
 msgid "To save and easily find your maps, identify yourself."
-msgstr "Um deine Karten einfach zu speichern und wieder zu finden, merke dich an."
+msgstr "Um deine Karten einfach zu speichern und wieder zu finden, melde dich an."
 
 #: templates/registration/login.html:25
 msgid "Please log in with your account:"
-msgstr "Bitte melden Sie sich mit Ihrem Konto an"
+msgstr "Bitte melde dich mit deinem Konto an"
 
 #: templates/registration/login.html:42
 msgid "Username"
@@ -513,11 +513,11 @@ msgstr "Meine Karten"
 #: templates/umap/dashboard_menu.html:11
 #, python-format
 msgid "My Templates (%(count)s)"
-msgstr ""
+msgstr "Meine Vorlagen (%(count)s)"
 
 #: templates/umap/dashboard_menu.html:13 templates/umap/user_templates.html:6
 msgid "My Templates"
-msgstr ""
+msgstr "Meine Vorlagen"
 
 #: templates/umap/dashboard_menu.html:17
 msgid "My profile"
@@ -720,7 +720,7 @@ msgstr "Keine Karte gefunden."
 
 #: templates/umap/search.html:36
 msgid "Latest created maps in category"
-msgstr ""
+msgstr "Zuletzt erstellte Karten in Kategorie"
 
 #: templates/umap/search.html:43
 msgid "Latest created maps"
@@ -775,7 +775,7 @@ msgstr "Meine Karten suchen"
 
 #: templates/umap/user_dashboard.html:11
 msgid "Map’s name"
-msgstr ""
+msgstr "Kartenname"
 
 #: templates/umap/user_dashboard.html:12
 #, python-format
@@ -800,28 +800,28 @@ msgstr "Neues Team"
 
 #: templates/umap/user_templates.html:10
 msgid "Search my templates"
-msgstr ""
+msgstr "Meine Vorlagen durchsuchen"
 
 #: templates/umap/user_templates.html:11
 msgid "Template’s name"
-msgstr ""
+msgstr "Vorlagen name"
 
 #: templates/umap/user_templates.html:12
 #, python-format
 msgid "Download %(count)s templates"
-msgstr ""
+msgstr "Herunterlagen von %(count) Vorlage(n)"
 
 #: templates/umap/user_templates.html:15
 msgid "You have no template yet."
-msgstr ""
+msgstr "Du hast noch keine Vorlagen"
 
 #: templates/umap/user_templates.html:16
 msgid "Create a template"
-msgstr ""
+msgstr "Vorlage erstellen"
 
 #: templates/umap/user_templates.html:17
 msgid "No template found."
-msgstr ""
+msgstr "Keine Vorlage gefunden"
 
 #: views.py:233
 msgid "Cannot delete a team with more than one member"
