--- a/umap/static/umap/locale/en.json
+++ b/umap/static/umap/locale/en.json
@@ -614,5 +614,6 @@
     "Loss:": "Loss:",
     "Altitude:": "Altitude:",
     "Right-click to edit": "Right-click to edit",
-    "Draw along routes": "Draw along routes"
+    "Draw along routes": "Draw along routes",
+    "Skipping invalid geometry": "Skipping invalid geometry"
 }
