--- a/umap/static/umap/locale/fr.json
+++ b/umap/static/umap/locale/fr.json
@@ -614,5 +614,6 @@
     "Loss:": "Dénivelé négatif :",
     "Altitude:": "Altitude :",
     "Right-click to edit": "Clic droit pour éditer",
-    "Draw along routes": "Dessiner en suivant les routes"
+    "Draw along routes": "Dessiner en suivant les routes",
+    "Skipping invalid geometry": "Géométrie invalide ignorée"
 }
