--- a/umap/static/umap/locale/de.json
+++ b/umap/static/umap/locale/de.json
@@ -518,8 +518,8 @@
     "Edit map default view": "Standardansicht der Karte bearbeiten",
     "Use current center and zoom": "Aktuelle Position und Zoomstufe speichern",
     "Layer permalink": "Permalink für Ebene",
-    "Back to home": "Back to home",
-    "Home logo": "Home logo",
+    "Back to home": "Zurück zur Startseite",
+    "Home logo": "Logo der Startseite",
     "Add this geometry to my map": "Add this geometry to my map",
     "Add this place to my map": "Add this place to my map",
     "Cancel last edit": "Letzte Bearbeitung abbrechen",
@@ -538,7 +538,7 @@
     "Cannot save layer, please try again in a few minutes.": "Ebene konnte nicht gespeichert werden. Bitte versuche es in ein paar Minuten erneut.",
     "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.": "Activate collaborative live editing on this map. Other users must reload the map after changing this setting.",
     "More help resources": "More help resources",
-    "This map is a template": "This map is a template",
+    "This map is a template": "Die Karte ist eine Vorlage",
     "Add text along path": "Add text along path",
     "Text color": "Textfarbe",
     "Text offset": "Text offset",
@@ -555,65 +555,65 @@
     "From community": "Von der Community",
     "You must select a template.": "Du musst eine Vorlage auswählen.",
     "Line decoration": "Line decoration",
-    "Reuse this template": "Reuse this template",
+    "Reuse this template": "Vorlage wiederverwenden",
     "Create a new map using this template": "Erstelle eine neue Karte aus dieser Vorlage.",
     "Save template": "Vorlage speichern",
     "Load template": "Vorlage laden",
-    "Loading a template will apply predefined styles and settings to your map": "Loading a template will apply predefined styles and settings to your map",
-    "Load template with data": "Load template with data",
-    "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".": "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".",
-    "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.": "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.",
-    "There is no public template yet.": "There is no public template yet.",
-    "Explore": "Explore",
+    "Loading a template will apply predefined styles and settings to your map": "Eine Vorlage zu laden wird die vordefinierten Stiele und Einstellungen auf die Karte anwenden.",
+    "Load template with data": "Vorlagen mit Daten laden",
+    "You have no registered template yet. You can add one by creating a new map and flagging it as \"template\".": "Du hast noch keine Vorlage eingetragen. Füge eine hinzu, indem du eine neue Karte erstellst und als \"Vorlage\" markierst.",
+    "There is no recommended template yet. Recommended templates are the ones starred by uMap administrators.": "Es gibt noch keine empfohlene Vorlage. Empfohlene Vorlagen werden von uMap Adminstratoren markiert.",
+    "There is no public template yet.": "Es gibt noch keine öffentliche Vorlage",
+    "Explore": "Erkunden",
     "Import data from public open data portals": "Import data from public open data portals",
     "Choose a portal": "Choose a portal",
-    "Limit results to current map view": "Limit results to current map view",
-    "Please choose an instance first.": "Please choose an instance first.",
+    "Limit results to current map view": "Treffer auf aktuelle Ansicht einschränken",
+    "Please choose an instance first.": "Bitte zuerst eine Instanz wählen",
     "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.": "No geo column found: must be either `lat(itude)` and `lon(gitude)` or `geom(etry)`.",
-    "Add a new field": "Add a new field",
-    "Are you sure you want to delete this field on all the features?": "Are you sure you want to delete this field on all the features?",
-    "Please enter the new name of this field": "Please enter the new name of this field",
-    "Cannot process MultiPoint": "Cannot process MultiPoint",
-    "Manage Fields": "Manage Fields",
-    "Rename this field": "Rename this field",
-    "Delete this field": "Delete this field",
-    "Double click to edit the name": "Double click to edit the name",
-    "Print map": "Print map",
-    "Choose a format": "Choose a format",
-    "Scale map": "Scale map",
-    "portrait": "portrait",
-    "landscape": "landscape",
-    "Print": "Print",
-    "Preparing the print…": "Preparing the print…",
-    "Large Circle": "Large Circle",
-    "Icon size": "Icon size",
-    "Will only affect raw and large circle icons.": "Will only affect raw and large circle icons.",
-    "Route": "Route",
-    "Display the print control": "Display the print control",
+    "Add a new field": "Neues Feld hinzufügen",
+    "Are you sure you want to delete this field on all the features?": "Bist du dir sicher dieses Feld in allen Einstellungen zu löschen?",
+    "Please enter the new name of this field": "Bitte den neuen Namen des Feldes eingeben",
+    "Cannot process MultiPoint": "Multipoint kann nicht verarbeitet werden",
+    "Manage Fields": "Felder bearbeiten",
+    "Rename this field": "Feld umbennen",
+    "Delete this field": "Feld löschen",
+    "Double click to edit the name": "Doppel-Klick um den Namen zu ändern",
+    "Print map": "Karte drucken",
+    "Choose a format": "Format wählen",
+    "Scale map": "Karte skalieren",
+    "portrait": "Langformat",
+    "landscape": "Querformat",
+    "Print": "Drucken",
+    "Preparing the print…": "Druck vorbereiten...",
+    "Large Circle": "Großer Kreis",
+    "Icon size": "Icon Größe",
+    "Will only affect raw and large circle icons.": "Das wird nur ursprüngliche- und große Kreisicons beinflussen.",
+    "Route": "Strecke",
+    "Display the print control": "Druckeinstellungen anzeigen",
     "Compute isochrone from here": "Compute isochrone from here",
-    "Route settings": "Route settings",
+    "Route settings": "Strecken Einstellungen",
     "Transform to regular line": "Transform to regular line",
-    "Transform to route": "Transform to route",
-    "Restore route": "Restore route",
-    "Compute elevation": "Compute elevation",
-    "Profile": "Profile",
+    "Transform to route": "In Strecke umwandeln",
+    "Restore route": "Strecke wiederherstellen",
+    "Profile": "Profil",
     "Compute elevations": "Compute elevations",
-    "Route preference": "Route preference",
-    "Compute route": "Compute route",
-    "Walking": "Walking",
-    "Hiking": "Hiking",
-    "By car": "By car",
-    "Cycling": "Cycling",
-    "Wheelchair": "Wheelchair",
-    "Recommended": "Recommended",
-    "Fastest": "Fastest",
-    "Shortest": "Shortest",
-    "Max time (in minutes)": "Max time (in minutes)",
-    "Number of lines": "Number of lines",
-    "Distance:": "Distance:",
-    "Gain:": "Gain:",
-    "Loss:": "Loss:",
-    "Altitude:": "Altitude:",
-    "Right-click to edit": "Right-click to edit",
-    "Draw along routes": "Draw along routes"
+    "Route preference": "Streckenvoreinstellung",
+    "Compute route": "Strecke berechnen",
+    "Walking": "Gehen",
+    "Hiking": "Wandern",
+    "By car": "mit Auto",
+    "Cycling": "Fahrradfahren",
+    "Wheelchair": "Rollstuhl",
+    "Recommended": "Empfohlen",
+    "Fastest": "Am Schnellsten",
+    "Shortest": "Am Kürzesten",
+    "Max time (in minutes)": "Maximale Zeit (in Minuten)",
+    "Number of lines": "Zeilennummern",
+    "Distance:": "Entfernung:",
+    "Gain:": "Anstieg:",
+    "Loss:": "Abstieg:",
+    "Altitude:": "Höhe:",
+    "Right-click to edit": "Rechts-Klick zum editieren",
+    "Draw along routes": "Draw along routes",
+    "Skipping invalid geometry": "Skipping invalid geometry"
 }
